# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.67 2009/10/01 13:26:21 nelchael Exp $

*tuxonice-sources-2.6.31 (29 Sep 2009)
*tuxonice-sources-2.6.30-r6 (29 Sep 2009)

  29 Sep 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.29-r3.ebuild, -tuxonice-sources-2.6.30-r4.ebuild,
  -tuxonice-sources-2.6.30-r5.ebuild, +tuxonice-sources-2.6.30-r6.ebuild,
  +tuxonice-sources-2.6.31.ebuild:
  Version bumps, remove old versions.

*tuxonice-sources-2.6.30-r5 (14 Aug 2009)

  14 Aug 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.30-r5.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.30-r4 (25 Jul 2009)
*tuxonice-sources-2.6.29-r4 (25 Jul 2009)

  25 Jul 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.29-r4.ebuild, +tuxonice-sources-2.6.30-r4.ebuild:
  Version bump, uses snapshot of TuxOnIce.

  04 Jun 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.24-r9.ebuild, -tuxonice-sources-2.6.28-r3.ebuild,
  -tuxonice-sources-2.6.28-r4.ebuild, -tuxonice-sources-2.6.28-r5.ebuild,
  -tuxonice-sources-2.6.28-r7.ebuild, -tuxonice-sources-2.6.28-r8.ebuild,
  -tuxonice-sources-2.6.28-r9.ebuild, -tuxonice-sources-2.6.29.ebuild,
  -tuxonice-sources-2.6.29-r1.ebuild, -tuxonice-sources-2.6.29-r2.ebuild:
  Remove old/unneeded versions.

  03 Jun 2009; Dawid Węgliński <cla@gentoo.org>
  tuxonice-sources-2.6.28-r10.ebuild:
  Stable on amd64 (bug #267768)

*tuxonice-sources-2.6.29-r3 (29 May 2009)

  29 May 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.29-r3.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.29-r2 (15 May 2009)
*tuxonice-sources-2.6.28-r11 (15 May 2009)

  15 May 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.28-r11.ebuild, +tuxonice-sources-2.6.29-r2.ebuild: