@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST current-tuxonice-for-2.6.30.patch-20090620-v1.bz2 114215 RMD160 835a301d27035f7ed030686308471a2b3b3d4346 SHA1 664df5a7c3c776835e2408b15d1966fac6e3ac7c SHA256 0c2c7969751625da59f02284bc346116a6e6a52b1b3e258cedc317bc0a16977f
 DIST current-tuxonice-for-2.6.31.patch-20090911-v1.bz2 114786 RMD160 aa41c159ebe826fc9312b5a21f1ed8cc74e88503 SHA1 f711554205de079a429c6cee620ee818399b246e SHA256 1b55326ee385bc4486302fdee5b2f0436b8183455ad26915f78d60518d466578
 DIST genpatches-2.6.28-7.base.tar.bz2 180022 RMD160 a73a586284962243eb79562c0a73f2d9833902a8 SHA1 a24244a3b9e64ef735e1e2bd0dda27af8b6510c4 SHA256 9119e3048c69ed454925f58eaa1148ccb36cb0a76453f89c7117430c7ce841aa
@@ -18,8 +21,15 @@ DIST tuxonice-3.0.1-for-2.6.28.patch.bz2 114512 RMD160 d7b559de7a324c54a859f641b
 DIST tuxonice-3.0.1-for-2.6.29.patch.bz2 112821 RMD160 b40ebf780b75dc792c44fa79a6017b9208744cc0 SHA1 ec4b2a57a4b39468f87e35223a9ee5c665bbb00c SHA256 426781205330c4c0b65ddb40d4ba42c12c5bc1a06697a9c97965295662b477dd
 EBUILD tuxonice-sources-2.6.28-r10.ebuild 1254 RMD160 56cba0a5f163e970a7cc431461161f749e62f385 SHA1 ce714ed3fe6e321234e9768f176a3325af95e008 SHA256 f404abe6e3ada84775d1f22e2781fa278595a75de9d9fe2b6f99395e35b35a79
 EBUILD tuxonice-sources-2.6.28-r11.ebuild 1261 RMD160 0106e667cb75b8a220ffe90fdb398ecef99401e4 SHA1 f67d8ae461f68ce31af8c00350f7509f0644c12e SHA256 69f9080597c843b7aed2b66a5cbfb1e6efecbc143dbf89b2330a6dee751446a1
-EBUILD tuxonice-sources-2.6.29-r4.ebuild 1260 RMD160 ef377748b3f5be3316041e8be4feb5e64d9f3e7a SHA1 c70a2f55aad0ef244c835833de56917d66839714 SHA256 4b082cd98c19b4a6c3e350d7bed9be3761656fdc88abf9320eef142d86ad06be
-EBUILD tuxonice-sources-2.6.30-r6.ebuild 1422 RMD160 c641630ce1736b06d37c371d0d7433c356def2d4 SHA1 faa8e6a45dd69ff83fb8f10ed986c4c5036d5eb3 SHA256 bbed1d8b09aebb9e81e3d3601e81467c9da9d1ebf2c4e54a0ce31ae3eb99450d
+EBUILD tuxonice-sources-2.6.29-r4.ebuild 1256 RMD160 77dd84701db7dd37b5789b69c79a3d818c017860 SHA1 a948dd317629cd03c9dea346cbbc51fb46514b1a SHA256 4ca68aa49c99f3d2e7bf81bd91d606472ca196f8c704c03e7152da178f02070c
+EBUILD tuxonice-sources-2.6.30-r6.ebuild 1418 RMD160 af184fd29c77b0a77fa383e8e477da4f1ecd7629 SHA1 1f2cf213e9de1901f98a3c375859821ff7d986ae SHA256 6babb47cf8d9ea75ee7036f2686d825f3b0b21c8877f497828ee769c3177c59f
 EBUILD tuxonice-sources-2.6.31.ebuild 1419 RMD160 24559c39e50d1d3acbc667afced58f957a11176b SHA1 bda8c70cf5d797739ceea36c3e9ed81fc96b4e8d SHA256 237b9b50942da4f8106b5608d78738e2505c0a30dcc2da91ba6ee59b49155e9a
-MISC ChangeLog 38964 RMD160 6e04329e8305fd23211d66f95356d70b991f6d12 SHA1 829e4b680098117ba6ad274f6d30f0664bbe8378 SHA256 937b185a60006eb2607f0fdcb2dd1959846f30c25cc4eb010f45ca2a57274669
+MISC ChangeLog 39114 RMD160 908f4bc1716f647b3d5b0acf38d8070e410e5aea SHA1 563786f7f23d871fb1e51a6ea12a221cc865b361 SHA256 67e33c27ce0007ef0175a3f5aa7e81159a940f7143eb4fb6a65360538c2696da
 MISC metadata.xml 278 RMD160 ed11e2348ca2d8f2bd5d647afab7eedf49ed4fea SHA1 7fecfe735fd49536863c0045aa1548860ad89797 SHA256 17c4da4868f175afef2cf8bca329a88c874b117ed9c242ec2139864475606bbe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkrwi3wACgkQNQqtfCuFneMTVwCeJ8bbTBl4EVG2JPddfblDlwP6
+dQwAn3pF+iN9K+IbF8YpjUxXIx6MzhFS
+=Tg0g
+-----END PGP SIGNATURE-----
